# lexicon-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  cliff.toml  install.sh
.github/workflows/: docs.yml  publish.yml  release.yml
crates/ai/: Cargo.toml
crates/ai/src/: boundary.rs  client.rs  context.rs  error.rs  generate.rs  lib.rs  policy.rs  prompt.rs  snapshot_tests.rs
crates/ai/src/snapshots/: lexicon_ai__snapshot_tests__tests__assemble_context_full.snap
crates/api/: Cargo.toml
crates/api/src/: baseline.rs  diff.rs  error.rs  extract.rs  report.rs  snapshot_tests.rs
crates/audit/: Cargo.toml
crates/audit/src/: error.rs  lib.rs  reader.rs  writer.rs
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  main.rs  output.rs
crates/cli/src/commands/: api.rs  auth.rs  behavior.rs  chat.rs  coach.rs  conformance.rs  contract.rs  coverage.rs  doctor.rs  ecosystem_cmd.rs  gate.rs  generate.rs  init.rs  mod.rs  prompt.rs  review.rs  score.rs  sync.rs  verify.rs  workspace_cmd.rs
crates/cli/tests/: integration.rs
crates/conformance/: Cargo.toml
crates/conformance/src/: generator.rs  templates.rs
crates/conversation/: Cargo.toml
crates/conversation/src/: driver.rs  engine.rs  error.rs  lib.rs  mode_hints.rs  session.rs  workflow.rs
crates/core/: Cargo.toml
crates/core/src/: api.rs  auth.rs  chat.rs  coach.rs  contract.rs  coverage.rs  ecosystem_mgmt.rs  error.rs  generate.rs  init.rs  lib.rs  prompt_gen.rs  prompt_graph.rs  score.rs  sync_claude.rs  verify.rs  workspace.rs
crates/coverage/: Cargo.toml
crates/coverage/src/: analyzer.rs  error.rs  lib.rs  matcher.rs  report.rs  snapshot_tests.rs
crates/fs/: Cargo.toml
crates/fs/src/: error.rs  lib.rs  patch.rs  safe_write.rs
crates/gates/: Cargo.toml
crates/gates/src/: error.rs  lib.rs  policy.rs  result.rs  runner.rs
crates/repo/: Cargo.toml
crates/repo/src/: detect.rs  error.rs  inspect.rs  layout.rs  lexicon_dir.rs  lib.rs
crates/scaffold/: Cargo.toml
crates/scaffold/src/: claude.rs  conformance.rs  contract.rs  error.rs  gates.rs  init.rs  lib.rs  scoring.rs
crates/scoring/: Cargo.toml
crates/scoring/src/: engine.rs  error.rs  explain.rs  lib.rs  snapshot_tests.rs
crates/scoring/src/snapshots/: lexicon_scoring__snapshot_tests__tests__explain_failing_score.snap
crates/spec/: Cargo.toml
crates/spec/src/: audit.rs  auth.rs  behavior.rs  capability.rs  common.rs  conformance.rs  contract.rs  ecosystem.rs  error.rs  gates.rs  lib.rs  manifest.rs  prompt.rs  scoring.rs  session.rs  snapshot_tests.rs  validation.rs  workspace.rs
crates/spec/src/snapshots/: lexicon_spec__snapshot_tests__tests__contract_toml.snap  lexicon_spec__snapshot_tests__tests__gates_model_toml.snap  lexicon_spec__snapshot_tests__tests__score_model_toml.snap
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  event.rs  ui.rs
docs/: astro.config.mjs  pnpm-lock.yaml
docs/src/components/diagrams/: AISafetyDiagram.astro  ArchitectureGovernanceDiagram.astro  ContractCoverageDiagram.astro  LexiconModelDiagram.astro  ProgressiveScopeDiagram.astro  VerificationPipelineDiagram.astro
docs/src/components/homepage/: CTARow.astro  FeatureGrid.astro  ScopeCards.astro  Section.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/commands/: api.mdx  auth.mdx  behavior.mdx  chat.mdx  conformance.mdx  contract.mdx  coverage.mdx  doctor.mdx  ecosystem.mdx  gate.mdx  generate.mdx  improve.mdx  init.mdx  score.mdx  sync.mdx  tui.mdx  verify.mdx  workspace.mdx
docs/src/content/docs/concepts/: ai-agents.mdx  ai-integration.mdx  api-extraction.mdx  architecture.mdx  coverage.mdx  (+8 more)
samples/: audit_record.json  claude_md_block.md  contract.toml  conversation_session.json  gates.toml  scoring_model.toml
specs/: SPRINT.md
specs/prompts/: 001-initial.md  002-improvements.md  003-finalized-improvment.md  004-progressive-adoption.md  005-auth-impl.md  006-project-description.md  007-docs-diagrams.md  008-homepage.md  009-ai-assisted-work.md  010-ai-prompting.md  011-ai-generated-tests.md  012-codegen.md
src/: app.rs  lib.rs  main.rs
src/ai/: boundary.rs  client.rs  context.rs  error.rs  generate.rs  mod.rs  policy.rs  prompt.rs  snapshot_tests.rs
src/ai/snapshots/: lexicon_rs__ai__snapshot_tests__tests__assemble_context_full.snap
src/api/: baseline.rs  diff.rs  extract.rs  mod.rs  report.rs  schema.rs  snapshot_tests.rs
src/api/snapshots/: lexicon_rs__api__snapshot_tests__snapshot_api_diff_report.snap  lexicon_rs__api__snapshot_tests__snapshot_api_snapshot_json.snap
src/audit/: error.rs  reader.rs  writer.rs
src/commands/: auth.rs  chat.rs  init.rs  verify.rs
src/conformance/: error.rs  generator.rs  mod.rs  templates.rs
src/conversation/: driver.rs  engine.rs  error.rs  mod.rs  mode_hints.rs  session.rs
src/core/: api.rs  auth.rs  chat.rs  coach.rs  contract.rs  coverage.rs  ecosystem_mgmt.rs  error.rs  generate.rs  init.rs  mod.rs  prompt_gen.rs  prompt_graph.rs  score.rs  sync_claude.rs  verify.rs  workspace.rs
src/coverage/: analyzer.rs  matcher.rs  report.rs  snapshot_tests.rs
src/coverage/snapshots/: lexicon_rs__coverage__snapshot_tests__snapshot_coverage_report.snap
src/fs/: diff.rs  patch.rs  safe_write.rs
src/gates/: policy.rs  runner.rs
src/repo/: detect.rs  error.rs  inspect.rs  layout.rs  lexicon_dir.rs  mod.rs
src/scaffold/: claude.rs  conformance.rs  contract.rs  error.rs  gates.rs  init.rs  scoring.rs
src/scoring/: engine.rs  explain.rs  mod.rs  snapshot_tests.rs
src/scoring/snapshots/: lexicon_rs__scoring__snapshot_tests__tests__explain_passing_score.snap
src/spec/: audit.rs  auth.rs  behavior.rs  capability.rs  common.rs  conformance.rs  contract.rs  error.rs  gates.rs  manifest.rs  mod.rs  mode.rs  scoring.rs  session.rs  snapshot_tests.rs  validation.rs  version.rs  workspace.rs
src/spec/snapshots/: lexicon_rs__spec__snapshot_tests__tests__contract_toml.snap  lexicon_rs__spec__snapshot_tests__tests__manifest_toml.snap  lexicon_rs__spec__snapshot_tests__tests__score_model_toml.snap
src/tui/: app.rs  mod.rs  ui.rs
tests/: integration.rs
(+14 files in other folders)
