[workspace]
resolver = "3"
members = [
    "crates/cli",
    "crates/tui",
    "crates/core",
    "crates/spec",
    "crates/scaffold",
    "crates/conversation",
    "crates/conformance",
    "crates/gates",
    "crates/scoring",
    "crates/ai",
    "crates/fs",
    "crates/repo",
    "crates/audit",
    "crates/coverage",
    "crates/api",
]
default-members = ["crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }


# HTTP / Auth
reqwest = { version = "0.12", features = ["blocking", "json"] }
sha2 = "0.10"
open = "5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
semver = { version = "1", features = ["serde"] }
glob = "0.3"
similar = "2"
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
rustyline = "15"

# Testing
tempfile = "3"
insta = { version = "1", features = ["toml", "json"] }

# Workspace internal
lexicon-core = { path = "crates/core" }
lexicon-spec = { path = "crates/spec" }
lexicon-scaffold = { path = "crates/scaffold" }
lexicon-conversation = { path = "crates/conversation" }
lexicon-conformance = { path = "crates/conformance" }
lexicon-gates = { path = "crates/gates" }
lexicon-scoring = { path = "crates/scoring" }
lexicon-ai = { path = "crates/ai" }
lexicon-fs = { path = "crates/fs" }
lexicon-repo = { path = "crates/repo" }
lexicon-audit = { path = "crates/audit" }
lexicon-tui = { path = "crates/tui" }
lexicon-coverage = { path = "crates/coverage" }
lexicon-api = { path = "crates/api" }
