[workspace]
resolver = "3"
members = [
    "crates/cli",
    "crates/tui",
    "crates/core",
    "crates/spec",
    "crates/scaffold",
    "crates/conversation",
    "crates/conformance",
    "crates/gates",
    "crates/scoring",
    "crates/ai",
    "crates/fs",
    "crates/repo",
    "crates/audit",
    "crates/coverage",
    "crates/api",
]
default-members = ["crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }


# HTTP / Auth
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
open = "5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
semver = { version = "1", features = ["serde"] }
glob = "0.3"
similar = "2"
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
rustyline = "15"
libc = "0.2"

# Testing
tempfile = "3"
insta = { version = "1", features = ["toml", "json"] }

# Workspace internal
lexicon-core = { path = "crates/core", version = "0.1.0" }
lexicon-spec = { path = "crates/spec", version = "0.1.0" }
lexicon-scaffold = { path = "crates/scaffold", version = "0.1.0" }
lexicon-conversation = { path = "crates/conversation", version = "0.1.0" }
lexicon-conformance = { path = "crates/conformance", version = "0.1.0" }
lexicon-gates = { path = "crates/gates", version = "0.1.0" }
lexicon-scoring = { path = "crates/scoring", version = "0.1.0" }
lexicon-ai = { path = "crates/ai", version = "0.1.0" }
lexicon-fs = { path = "crates/fs", version = "0.1.0" }
lexicon-repo = { path = "crates/repo", version = "0.1.0" }
lexicon-audit = { path = "crates/audit", version = "0.1.0" }
lexicon-tui = { path = "crates/tui", version = "0.1.0" }
lexicon-coverage = { path = "crates/coverage", version = "0.1.0" }
lexicon-api = { path = "crates/api", version = "0.1.0" }
