[package]
name = "lexicon-rs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
description = "Contract-driven verification and governance for software systems"

[[bin]]
name = "lexicon"
path = "src/main.rs"

[lib]
name = "lexicon_rs"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# HTTP / Auth
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
open = "5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
semver = { version = "1", features = ["serde"] }
glob = "0.3"
similar = "2"
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
rustyline = "15"
libc = "0.2"

# API extraction
syn = { version = "2", features = ["full", "parsing", "visit"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }

# File operations
tempfile = "3"

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["toml", "json"] }
chrono = { version = "0.4", features = ["serde"] }
