[package]
name = "lexicon-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "AI prompt construction and integration boundaries for lexicon"

[dependencies]
lexicon-spec.workspace = true
lexicon-conversation.workspace = true
lexicon-repo.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
chrono.workspace = true
