[package]
name = "lexicon-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Audit records and history for lexicon"

[dependencies]
lexicon-spec.workspace = true
lexicon-fs.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
