[package]
name = "lexicon-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Conformance suite generation for lexicon"

[dependencies]
lexicon-spec.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
