[package]
name = "lexicon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Orchestration and domain services for lexicon"

[dependencies]
lexicon-spec.workspace = true
lexicon-fs.workspace = true
lexicon-repo.workspace = true
lexicon-audit.workspace = true
lexicon-scoring.workspace = true
lexicon-gates.workspace = true
lexicon-conformance.workspace = true
lexicon-conversation.workspace = true
lexicon-ai.workspace = true
lexicon-scaffold.workspace = true
lexicon-api.workspace = true
lexicon-coverage.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
thiserror.workspace = true
miette.workspace = true
reqwest.workspace = true
sha2.workspace = true
open.workspace = true
console.workspace = true
indicatif.workspace = true

[dev-dependencies]
tempfile.workspace = true
