[package]
name = "lexicon-coverage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
lexicon-spec.workspace = true
serde.workspace = true
serde_json.workspace = true
glob.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
