[package]
name = "lexicon-scaffold"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Template generation and file emission for lexicon"

[dependencies]
lexicon-spec.workspace = true
lexicon-fs.workspace = true
lexicon-repo.workspace = true
lexicon-conformance.workspace = true
thiserror.workspace = true
toml.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
