[package]
name = "lexicon-spec"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Domain types, schemas, and validation for lexicon"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
uuid.workspace = true
semver.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
